Docker plugin add to POM

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,35 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.32.0</version>
+
+                <configuration>
+                    <verbose>true</verbose>
+                    <images>
+                        <image>
+                            <name>bnp-kata</name>
+                            <build>
+                                <!--  TODO better to have this in a subdirectory -->
+                                <dockerFileDir>${project.basedir}</dockerFileDir>
+
+                                <!--copies artefact to docker build dir in target-->
+                                <assembly>
+                                    <descriptorRef>artifact</descriptorRef>
+                                </assembly>
+                                <tags>
+                                    <tag>latest</tag>
+<!--                                    <tag>${project.version}</tag>-->
+                                </tags>
+                            </build>
+                        </image>
+                    </images>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
