--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,7 @@
                         <image>
                             <name>bnp-kata</name>
                             <build>
-                                <!--  TODO better to have this in a subdirectory -->
-                                <dockerFileDir>${project.basedir}</dockerFileDir>
-
+                                <dockerFileDir>${project.basedir}/src/main/docker/</dockerFileDir>
                                 <!--copies artefact to docker build dir in target-->
                                 <assembly>
                                     <descriptorRef>artifact</descriptorRef>
