--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -6,6 +6,6 @@ EXPOSE 80
 
 WORKDIR /usr/local/bin
 
-COPY ./target/bnp-kata-0.0.1-SNAPSHOT.jar webapp.jar
+COPY maven/bnp-kata-0.0.1-SNAPSHOT.jar webapp.jar
 
 CMD ["java", "-jar", "webapp.jar"]
